--- a/DevEdu/Login V1/DevEdu.csproj
+++ b/DevEdu/Login V1/DevEdu.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminVerify.cs" />
     <Compile Include="Arrays.cs">
       <SubType>Form</SubType>
     </Compile>
