--- a/DevEdu/Login V1/DevEdu.csproj
+++ b/DevEdu/Login V1/DevEdu.csproj
@@ -99,12 +99,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdminVerify.cs" />
-    <Compile Include="Arrays.cs">
+    <Compile Include="DataDridGeneral.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Arrays.Designer.cs">
-      <DependentUpon>Arrays.cs</DependentUpon>
+    <Compile Include="DataDridGeneral.Designer.cs">
+      <DependentUpon>DataDridGeneral.cs</DependentUpon>
     </Compile>
     <Compile Include="DatagridAlumnos.cs">
       <SubType>Form</SubType>
@@ -148,11 +147,11 @@
     <Compile Include="DevTriviaFacil_1.Designer.cs">
       <DependentUpon>DevTriviaFacil_1.cs</DependentUpon>
     </Compile>
-    <Compile Include="DevTriviaMedio.cs">
+    <Compile Include="DevTriviaMedio_1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DevTriviaMedio.Designer.cs">
-      <DependentUpon>DevTriviaMedio.cs</DependentUpon>
+    <Compile Include="DevTriviaMedio_1.Designer.cs">
+      <DependentUpon>DevTriviaMedio_1.cs</DependentUpon>
     </Compile>
     <Compile Include="DevTriviaMenu.cs">
       <SubType>Form</SubType>
@@ -216,14 +215,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session.cs" />
     <Compile Include="Welcome Splash.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Welcome Splash.Designer.cs">
       <DependentUpon>Welcome Splash.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Arrays.resx">
-      <DependentUpon>Arrays.cs</DependentUpon>
+    <EmbeddedResource Include="DataDridGeneral.resx">
+      <DependentUpon>DataDridGeneral.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DatagridAlumnos.resx">
       <DependentUpon>DatagridAlumnos.cs</DependentUpon>
@@ -246,8 +246,8 @@
     <EmbeddedResource Include="DevTriviaFacil_1.resx">
       <DependentUpon>DevTriviaFacil_1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DevTriviaMedio.resx">
-      <DependentUpon>DevTriviaMedio.cs</DependentUpon>
+    <EmbeddedResource Include="DevTriviaMedio_1.resx">
+      <DependentUpon>DevTriviaMedio_1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DevTriviaMenu.resx">
       <DependentUpon>DevTriviaMenu.cs</DependentUpon>
