--- a/DevEdu/Login V1/DevEdu.csproj
+++ b/DevEdu/Login V1/DevEdu.csproj
@@ -99,11 +99,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataDridGeneral.cs">
+    <Compile Include="DataGridGeneral.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DataDridGeneral.Designer.cs">
-      <DependentUpon>DataDridGeneral.cs</DependentUpon>
+    <Compile Include="DataGridGeneral.Designer.cs">
+      <DependentUpon>DataGridGeneral.cs</DependentUpon>
     </Compile>
     <Compile Include="DatagridAlumnos.cs">
       <SubType>Form</SubType>
@@ -195,6 +195,12 @@
     <Compile Include="DevVis_ESTDTS_ej2.Designer.cs">
       <DependentUpon>DevVis_ESTDTS_ej2.cs</DependentUpon>
     </Compile>
+    <Compile Include="DgvGeneralAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DgvGeneralAdd.Designer.cs">
+      <DependentUpon>DgvGeneralAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMainMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -222,8 +228,8 @@
     <Compile Include="Welcome Splash.Designer.cs">
       <DependentUpon>Welcome Splash.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="DataDridGeneral.resx">
-      <DependentUpon>DataDridGeneral.cs</DependentUpon>
+    <EmbeddedResource Include="DataGridGeneral.resx">
+      <DependentUpon>DataGridGeneral.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DatagridAlumnos.resx">
       <DependentUpon>DatagridAlumnos.cs</DependentUpon>
@@ -269,6 +275,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DevVis_ESTDTS_ej2.resx">
       <DependentUpon>DevVis_ESTDTS_ej2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DgvGeneralAdd.resx">
+      <DependentUpon>DgvGeneralAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMainMenu.resx">
       <DependentUpon>FrmMainMenu.cs</DependentUpon>
